# notarize

./: .dockerignore  .gitignore  compose.yaml  makefile  openapi.yaml  pnpm-lock.yaml  readme.md
backend/: .air.toml  Dockerfile  go.mod  go.sum  sqlc.yaml
backend/cmd/server/: main.go
backend/internal/auth/: auth.go  auth_test.go  hash.go  security.go  token.go
backend/internal/config/: config.go
backend/internal/db/: db.go
backend/internal/db/migrations/: 00001_init.sql
backend/internal/db/models/: approval_process.go  decision.go  document.go  document_processing_job.go  issue.go  models.go  process_step.go  project.go  review_comment.go  signature.go  user.go
backend/internal/db/query/: folders.sql
backend/internal/handler/: document.go  handler.go  issue.go  login.go  project.go  user.go
backend/internal/storage/: storage.go
docs/: deployment.puml
frontend/: .gitignore  Dockerfile  README.md  components.json  eslint.config.js  openapi-ts.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
frontend/src/: app.d.ts  env.ts  hooks.server.ts
frontend/src/lib/: api-client.ts  fmt.ts  pagination.ts  toast.ts
frontend/src/lib/api/: .gitignore
frontend/src/lib/components/: app-sidebar.svelte  chart-area-interactive.svelte  code-block.svelte  data-table-cell-viewer.svelte  data-table.svelte  login-form.svelte  nav-main.svelte  nav-user.svelte  pagination.svelte  quick-create.svelte  (+2 more)
frontend/src/routes/: +error.svelte  +layout.svelte  +page.ts  layout.css
worker/: Dockerfile  pyproject.toml  worker.py
(+102 files in other folders)
