[project]
name = "notarize-worker"
version = "0.1.0"
description = "Docling extraction worker draining the document_processing_jobs queue"
requires-python = ">=3.14,<3.15"
dependencies = [
    "docling>=2.0,<3.0",
    "opencv-python-headless>=4.0,<5.0",
    "psycopg[binary]>=3.1,<4.0",
    "minio>=7.2,<8.0",
    "torch>=2.2.2,<3.0",
    "torchvision>=0,<1",
]

[dependency-groups]
dev = ["ruff>=0.15,<0.16"]

[tool.uv]
package = false
override-dependencies = ["opencv-python; sys_platform == 'darwin'"]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]
torchvision = [{ index = "pytorch-cpu" }]

[tool.ruff]
target-version = "py314"
line-length = 100
